--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
   },
   "dependencies": {
     "gatsby": "^4.5.4",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-remark": "^5.6.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "prettier": "^2.5.1"
